[project]
name = "gptapiwithgradio"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio (==4.44.1)",
    "openai (>=1.99.3,<2.0.0)",
    "pydantic (==2.10.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
